feat(store): add optional community catalogue
